api service tests