@@ -91,6 +91,7 @@
           <version>2.22.2</version>
           <configuration>
               <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+              <argLine>-Dnet.bytebuddy.experimental=true</argLine>
           </configuration>
         </plugin>
       </plugins>
